# codex-quota-ball

./: Cargo.toml  README.md
.superpowers/sdd/: task-3-report.md
docs/superpowers/plans/: 2026-07-15-codex-quota-ball.md  2026-07-15-token-heatmap-morph.md
docs/superpowers/specs/: 2026-07-15-codex-quota-ball-design.md  2026-07-15-token-heatmap-morph-design.md
packaging/: codex-quota-ball-autostart.desktop.in  codex-quota-ball.desktop.in
scripts/: install.sh  uninstall.sh
src/: codex.rs  config.rs  fonts.rs  lib.rs  main.rs  morph.rs  quota.rs  ui.rs  usage.rs  worker.rs  x11.rs
tests/: codex_client_tests.rs  config_tests.rs  install_scripts.sh  morph_tests.rs  quota_tests.rs  ui_tests.rs  usage_tests.rs  worker_tests.rs  x11_shape_tests.rs
tests/fixtures/: fake_codex.sh
