[package]
name = "codex-quota-ball"
version = "0.1.0"
edition = "2021"
description = "Ubuntu X11 floating indicator for remaining Codex quota"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
eframe = { version = "0.29", features = ["x11"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
